// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Merge Objects Function Snapshot 1`] = `
"function (objTarget, objSource) {
    for (var key in objSource) {
        // eslint-disable-next-line @typescript-eslint/ban-ts-ignore
        // @ts-ignore
        objTarget[key] = IsObject_1.isObject(objSource[key]) ?
            exports.mergeObjects(objTarget[key], objSource[key]) :
            objSource[key];
    }
    return objTarget;
}"
`;

exports[`Merge Objects mergeObjects(basic) 1`] = `
Object {
  "a": 0,
  "b": 1,
}
`;

exports[`Merge Objects mergeObjects(clone) 1`] = `
Object {
  "a": 0,
  "b": 1,
}
`;

exports[`Merge Objects mergeObjects(extended) 1`] = `
Object {
  "a": 0,
  "b": 1,
  "i": 2,
}
`;

exports[`Merge Objects mergeObjects(mutation) 1`] = `
Object {
  "a": 0,
  "b": 1,
}
`;

exports[`Merge Objects mergeObjects(mutation) 2`] = `
Object {
  "a": 0,
  "b": 1,
}
`;

exports[`Merge Objects mergeObjects(partial) 1`] = `
Object {
  "a": 0,
  "b": 1,
}
`;
